src/test/ui/let-else/let-else-allow-in-expr.stderr
error: unused variable: `x`
  --> $DIR/let-else-allow-in-expr.rs:7:13
   |
LL |         let x = 1;
   |             ^ help: if this is intentional, prefix it with an underscore: `_x`
   |
note: the lint level is defined here
  --> $DIR/let-else-allow-in-expr.rs:3:9
   |
LL | #![deny(unused_variables)]
   |         ^^^^^^^^^^^^^^^^

error: unused variable: `x`
  --> $DIR/let-else-allow-in-expr.rs:29:9
   |
LL |     let x = 1;
   |         ^ help: if this is intentional, prefix it with an underscore: `_x`

error: aborting due to 2 previous errors

